--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
   "name": "fow-ui",
-  "version": "0.1.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.2.0",
+  "description": "Fow UI Library wrapped around Antd",
+  "keywords": [
+    "react",
+    "antd",
+    "webpack",
+    "styleguidist",
+    "fow"
+  ],
+  "main": "dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "grkkmm1@gmail.com",
+  "license": "ISC",
+  "repository": "github:grkmtsn/fow-ui",
+  "browserslist": [
+    ">0.25%",
+    "not ie 11",
+    "not op_mini all"
+  ],
+  "files": [
+    "/dist"
+  ]
 }
