--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
     "react",
     "antd",
     "webpack",
-    "styleguidist",
+    "storybook",
+    "styled-components",
     "fow"
   ],
   "main": "dist/main.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-cli --progress --colors",
-    "build": "cross-env NODE_ENV=production webpack-cli --progress --colors",
-    "styleguide": "styleguidist server",
-    "styleguide:build": "styleguidist build",
+    "start": "cross-env NODE_ENV=development webpack-cli --progress",
+    "build": "cross-env NODE_ENV=production webpack-cli --progress",
     "postbuild": "npm pack && tar -xvzf *.tgz && rm -rf package *.tgz",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "author": "grkkmm1@gmail.com",
   "license": "ISC",
@@ -39,13 +40,16 @@
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
+    "@storybook/addon-actions": "^6.1.10",
+    "@storybook/addon-essentials": "^6.1.10",
+    "@storybook/addon-links": "^6.1.10",
+    "@storybook/react": "^6.1.10",
     "antd": "^4.9.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-import": "^1.13.3",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
-    "customize-cra": "^1.0.0",
     "eslint": "^7.15.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-loader": "^4.0.2",
@@ -53,16 +57,19 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "html-webpack-plugin": "^5.0.0-alpha.15",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-app-rewired": "^2.1.7",
     "react-dom": "^17.0.1",
     "react-scripts": "^4.0.1",
-    "react-styleguidist": "^11.1.5",
     "style-loader": "^2.0.0",
+    "styled-components": "^5.2.1",
     "terser-webpack-plugin": "^5.0.3",
     "webpack": "^5.10.0",
     "webpack-bundle-analyzer": "^4.2.0",
     "webpack-cli": "^4.2.0",
     "webpack-merge": "^5.4.0"
-  }
+  },
+  "dependencies": {}
 }
