--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fow-ui",
-  "version": "0.4.0",
+  "name": "fow-ui-dev",
+  "version": "1.3.0",
   "description": "Fow UI Library wrapped around Antd",
   "keywords": [
     "react",
@@ -31,10 +31,10 @@
     "/dist"
   ],
   "peerDependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
     "antd": "^4.9.1",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
