--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,13 @@
 {
-    "extends": ["airbnb", "airbnb/hooks"],
+    "parser": "babel-eslint",
+    "parserOptions": {
+        "sourceType": "module",
+        "allowImportExportEverywhere": true
+    },
+    "extends": [
+        "airbnb",
+        "airbnb/hooks"
+    ],
     "env": {
         "browser": true
     },
@@ -9,6 +17,17 @@
     "rules": {
         "linebreak-style": 0,
         "react/jsx-props-no-spreading": 0,
-        "import/no-extraneous-dependencies": 0
+        "import/no-extraneous-dependencies": 0,
+        "import/no-named-as-default": 0,
+        "import/named": 0,
+        "max-len": 0,
+        "react/forbid-prop-types": [
+            1,
+            {
+                "forbid": [
+                    "any"
+                ]
+            }
+        ]
     }
 }
