--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fow-ui-dev",
-  "version": "1.3.0",
+  "version": "1.3.2-dev",
   "description": "Fow UI Library wrapped around Antd",
   "keywords": [
     "react",
@@ -31,10 +31,12 @@
     "/dist"
   ],
   "peerDependencies": {
-    "antd": "^4.9.1",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "prop-types": "15.7.2",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "antd": "4.9.1",
+    "moment": "2.29.1",
+    "moment-timezone": "0.5.32"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -44,9 +46,10 @@
     "@storybook/addon-essentials": "^6.1.10",
     "@storybook/addon-links": "^6.1.10",
     "@storybook/react": "^6.1.10",
-    "antd": "^4.9.1",
+    "antd": "4.9.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-import": "^1.13.3",
+    "babel-plugin-react-intl": "^8.2.21",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
@@ -58,10 +61,14 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.0.0-alpha.15",
+    "moment": "2.29.1",
+    "moment-timezone": "^0.5.32",
+    "moment-timezone-data-webpack-plugin": "^1.3.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-app-rewired": "^2.1.7",
     "react-dom": "^17.0.1",
+    "react-intl": "^5.10.6",
     "react-scripts": "^4.0.1",
     "style-loader": "^2.0.0",
     "styled-components": "^5.2.1",
@@ -70,6 +77,5 @@
     "webpack-bundle-analyzer": "^4.2.0",
     "webpack-cli": "^4.2.0",
     "webpack-merge": "^5.4.0"
-  },
-  "dependencies": {}
+  }
 }
