--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@storybook/addon-links": "^6.1.10",
     "@storybook/react": "^6.1.10",
     "antd": "4.9.1",
+    "antd-scss-theme-plugin": "^1.0.8",
     "babel-loader": "^8.2.2",
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-react-intl": "^8.2.21",
@@ -61,6 +62,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.0.0-alpha.15",
+    "less-loader": "^7.1.0",
     "moment": "2.29.1",
     "moment-timezone": "^0.5.32",
     "moment-timezone-data-webpack-plugin": "^1.3.0",
@@ -70,6 +72,7 @@
     "react-dom": "^17.0.1",
     "react-intl": "^5.10.6",
     "react-scripts": "^4.0.1",
+    "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "styled-components": "^5.2.1",
     "terser-webpack-plugin": "^5.0.3",
@@ -77,5 +80,8 @@
     "webpack-bundle-analyzer": "^4.2.0",
     "webpack-cli": "^4.2.0",
     "webpack-merge": "^5.4.0"
+  },
+  "dependencies": {
+    "dynamic-antd-theme": "^0.7.0"
   }
 }
